# Test

./: README.md  main.py  setup_vm.sh
.claude/: settings.local.json
PDB Data/: .SB40.xtc_offsets.npz  SB40.xtc
graphify-out/: .graphify_python  .graphify_root
protein_optimizer/: .gitignore  README.md  genetic_algorithm.py  main.py  mutation.py  practice.sh  pyproject.toml  scoring.py  server.py  setup_vm.sh
protein_optimizer/config/: default.yaml  evolutionary.yaml
protein_optimizer/frontend/: index.html
protein_optimizer/protein_optimizer/: __init__.py  analysis.py  bioemu.py  config.py  esm.py  evolutionary_search.py  mutation.py  pipeline.py  scoring.py
protein_optimizer/protein_optimizer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
protein_optimizer/scripts/: bioemu_gif_maker.py  run_optimization.py  traj_gif_maker.py
protein_optimizer/shared_runs/run_L5Y/: results.txt
protein_optimizer/shared_runs/run_L5Y/best_mutant/: samples.xtc
protein_optimizer/shared_runs/run_L5Y/reference/: samples.xtc
protein_optimizer/tests/: test_ga.py  test_mutation.py  test_scoring.py
tests/: test_wildtype.py
